=== Desk Mess Mirrored ===
Changelog: February 24, 2013
== Version 2.2 ==
= Code =
* Added filtered text messages when comments are open/closed but none exist
* Added link to author page when comments closed message is displayed

= CSS =
* Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image
* Added CSS relevant to the "Monster" plugin that represents the default WordPress core plugins

= Miscellaneous =
* Updated 'style.css' header block to use labels as noted in core trac ticket #16868

= Current Internet Browsers Reviewed =
* Apple Safari
* Firefox
* Google Chrome
* Internet Explorer
* Opera

/** ------------------------------------------------------------------------- */
== Version 2.1 ==
Changelog: December 3, 2012
= Code =
* Added DMM_HOME_DOMAIN constant for better future proofing
* Added 'DMM No Posts Found' function to replace repetitive code
* Removed backward compatibility checks to bring in line with current WordPress versions (3.4+)
* Removed DMM_Add_Body_Classes in favor of using BNS Body Classes at http://wordpress.org/extend/plugins/bns-body-classes/

= Current Internet Browsers Reviewed =
* Apple Safari
* Firefox
* Google Chrome
* Internet Explorer
* Opera

/** ------------------------------------------------------------------------- */
== Version 2.0.4 ==
Changelog: August 21, 2012
= Code =
* Corrected use of `get_template_directory` in `load_theme_textdomain` parameters
* Removed backward compatibility check for wp_nav_menu
* Changed enqueued version to be dynamically taken from theme version
* Change 'comment-reply' script hook to 'comment_form_before'

= CSS =
* Reduce z-index of #cup to put under menu

= Miscellaneous =
* Removed German and Spanish translation files as too old.
* Added French translation files, courtesy of Samy Rahib at http://lahaut.info
* Minor typos in 'readme.txt'

/** ------------------------------------------------------------------------- */