@@ -1,9 +1,11 @@
 === Desk Mess Mirrored ===
-Changelog: February 24, 2013
+Changelog: February 25, 2013
 == Version 2.2 ==
 = Code =
 * Added filtered text messages when comments are open/closed but none exist
 * Added link to author page when comments closed message is displayed
+* Added code block termination comments
+* Minor code formatting / refactoring to use "braces" for code blocks
 
 = CSS =
 * Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image
